<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <ImageView
        android:src="@drawable/playstore"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tv_author"
        android:textStyle="bold"
        android:textColor="@color/dark_red"
        android:textSize="12sp" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp">
        <EditText
            android:id="@+id/tv_input_url"
            android:layout_width="0dp"
            android:hint="@string/tv_url_hint"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:background="@drawable/border"
            android:layout_height="57dp"
            android:layout_weight="0.77"/>
        <Button
            android:id="@+id/btn_paste"
            android:text="@string/btn_paste"
            android:textAllCaps="false"
            android:textSize="13sp"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:layout_weight="0.23"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_get_link"
        android:text="@string/btn_get_link"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_height="70dp"/>
    <TextView
        android:id="@+id/tv_download_size"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_download_url"
        android:layout_marginTop="3dp"
        android:padding="10dp"
        android:textColor="@color/dark_blue"
        android:background="@drawable/border"
        android:layout_marginStart="10dp"
        android:textSize="14sp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_download"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/btn_download"
        android:textAllCaps="false"
        android:backgroundTint="@color/light_blue"
        android:layout_width="match_parent"
        android:layout_height="70dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="1dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_copy"
            android:text="@string/btn_copy"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:backgroundTint="@color/light_blue"
            android:layout_width="0dp"
            android:layout_height="70dp"/>
        <Button
            android:id="@+id/btn_share"
            android:text="@string/btn_share"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:backgroundTint="@color/light_blue"
            android:layout_marginStart="2dp"
            android:layout_width="0dp"
            android:layout_height="70dp"/>
        <Button
            android:id="@+id/btn_clear"
            android:text="@string/btn_clear"
            android:textAllCaps="false"
            android:backgroundTint="@color/light_blue"
            android:layout_weight="1"
            android:layout_marginStart="2dp"
            android:layout_width="0dp"
            android:layout_height="70dp"/>
    </LinearLayout>


</LinearLayout>